# cpp-conan-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
include/: my_header.hpp
src/: main.cpp  my_header.cpp
